--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,9 @@
     <modules>
         <module>discovery-euraka</module>
         <module>provider-user</module>
+        <module>consumer-movie-ribbon</module>
+        <module>consumer-movie-feign</module>
+        <module>consumer-movie-ribbon-with-hystrix</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -23,7 +26,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.4.0.RELEASE</version>
+        <version>1.4.3.RELEASE</version>
     </parent>
 
     <dependencyManagement>
@@ -31,7 +34,7 @@
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
-                <version>Brixton.SR5</version>
+                <version>Camden.SR4</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
