--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>consumer-movie-ribbon</module>
         <module>consumer-movie-feign</module>
         <module>consumer-movie-ribbon-with-hystrix</module>
+        <module>config-server</module>
     </modules>
     <packaging>pom</packaging>
 
