--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>consumer-movie-feign</module>
         <module>consumer-movie-ribbon-with-hystrix</module>
         <module>config-server</module>
+        <module>config-client</module>
     </modules>
     <packaging>pom</packaging>
 
